--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "cassette"
+name = "demo"
 version = "0.1.0"
 authors = ["James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
-license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies.futures]
 version = "0.3.14"
 default-features = false
+
+[dependencies]
+cassette = { path = "../" }
+
