--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
 license = "MPL-2.0"
+description = "A WIP simple non-blocking executor"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
