--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "cassette"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
 license = "MPL-2.0"
-description = "A WIP simple non-blocking executor"
+description = "A simple, single-future, non-blocking executor intended for building state machines"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
