Rework and cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "cassette"
-version = "0.2.4"
+version = "0.3.0"
 authors = ["James Munns <james.munns@ferrous-systems.com>"]
 edition = "2018"
-license = "MPL-2.0"
+rust-version = "1.68"
+license = "MIT OR Apache-2.0"
 description = "A simple, single-future, non-blocking executor intended for building state machines"
 readme = "README.md"
 documentation = "https://docs.rs/cassette"
 homepage = "https://github.com/jamesmunns/cassette"
 repository = "https://github.com/jamesmunns/cassette"
+
+keywords = ["async", "no-std"]
+categories = ["asynchronous"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
