--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,24 @@ jobs:
       - name: Run cargo test
         run: cargo test -- --test-threads 1
 
+  demo:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    needs: [lints, docs]
+    env:
+      RUSTFLAGS: "-D warnings"
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      #- uses: Swatinem/rust-cache@v1
+
+      - name: Run cargo test
+        run: cd demo && cargo run
+
   msrv:
     name: Minimum Supported Rust Version
     runs-on: ubuntu-latest
